--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,9 +33,10 @@ INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
 # The program we're compiling with the sources set above
 ADD_EXECUTABLE(doodle_jump src/main.cpp src/Exceptions.cpp)
 
+target_link_libraries(doodle_jump representation logic)
+
 # Link target to SFML libs
 # (The SFML_LIBRARIES variable is defined by FindSFML.cmake, if SFML was found)
-TARGET_LINK_LIBRARIES(doodle_jump ${SFML_LIBRARIES})
-target_link_libraries(doodle_jump representation logic)
+target_link_libraries(doodle_jump ${SFML_LIBRARIES})
 
 INSTALL(TARGETS doodle_jump DESTINATION ${PROJECT_SOURCE_DIR}/bin)
