--- a/src/Game_Representation/CMakeLists.txt
+++ b/src/Game_Representation/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(representation
-        Model_View.cpp
+        Entity_View.cpp
         Player.cpp
         Game.cpp
-        )
+        Window.cpp
+        Bonus.cpp Bonus.h BG_Tile.cpp BG_Tile.h Platform.cpp Platform.h)
