--- a/src/Logic_libary/CMakeLists.txt
+++ b/src/Logic_libary/CMakeLists.txt
@@ -1,12 +1,12 @@
 add_library(logic
         BG_Tile.cpp
         Bonus.cpp
-        Entity_Model.cpp
+        EntityModel.cpp
         Observer.cpp
         Platform.cpp
         Player.cpp
         Stopwatch.cpp
         Subject.cpp
         World.cpp
-        Abstract_Factory.cpp
+        EntityFactory.cpp
         )
