--- a/src/Logic_libary/CMakeLists.txt
+++ b/src/Logic_libary/CMakeLists.txt
@@ -9,4 +9,4 @@ add_library(logic
         Subject.cpp
         World.cpp
         EntityFactory.cpp
-        Random.cpp Random.h)
+        Random.cpp Random.h Camera.cpp Camera.h)
