Kleine aanpassing aan CMakeLists.txt

--- a/src/Game_Representation/CMakeLists.txt
+++ b/src/Game_Representation/CMakeLists.txt
@@ -6,4 +6,6 @@ add_library(representation
         Bonus.cpp
         BG_Tile.cpp
         Platform.cpp
-        ConcreteFactory.cpp ConcreteFactory.h Score.cpp Score.h)
+        ConcreteFactory.cpp 
+        Score.cpp 
+        )
